--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
     </div>
 
     <!-- Manual Blackout Modal -->
-    <div id="blackout-modal" class="modal">
+    <div id="blackout-modal" class="modal scroll-box">
         <div class="modal-content">
             <div class="modal-header">
                 <h3><i class="fas fa-bolt"></i> Manual Blackout Control</h3>
