Add example email and password to login form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Login Screen -->
-    <div id="login-screen">
+   <div id="login-screen">
         <div class="login-form">
             <h2>Awadhpuri Electricity Monitoring</h2>
             <div class="user-type-selector">
@@ -18,11 +18,11 @@
                 <div class="user-type" id="official-user">Official</div>
             </div>
             <div class="form-group">
-                <label for="email">Email</label>
+                <label for="email">Email <span style="color: #ff8c42;  font-weight: 800;">admin@gmail.com</span></label>
                 <input type="email" id="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label for="password">Password <span style="color: #ff8c42;  font-weight: 800;">admin123</span></label>
                 <input type="password" id="password" placeholder="Enter your password">
             </div>
             <button class="btn btn-primary" id="login-btn">Login</button>
