--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <div class="user-type" id="official-user">Official</div>
             </div>
             <div class="form-group">
-                <label for="email">Email <span style="color: #ff8c42;  font-weight: 800;">admin@gmail.com</span></label>
+                <label for="email">Email <span style="color: #ff8c42;  font-weight: 800;">example@gmail.com</span></label>
                 <input type="email" id="email" placeholder="Enter your email">
             </div>
             <div class="form-group">
-                <label for="password">Password <span style="color: #ff8c42;  font-weight: 800;">admin123</span></label>
+                <label for="password">Password <span style="color: #ff8c42;  font-weight: 800;">example123</span></label>
                 <input type="password" id="password" placeholder="Enter your password">
             </div>
             <button class="btn btn-primary" id="login-btn">Login</button>
